// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Templates/AboutMe Should render correctly 1`] = `
<div>
  <header>
    Header
  </header>
  <main
    class="about-me__container"
  >
    <div
      class="about-me__title-container"
    >
      <img
        alt="Minha foto de perfil"
        class="about-me__title-image"
        data-nimg="1"
        decoding="async"
        height="150"
        src="/_next/image?url=%2Fimg%2Fme.jpeg&w=384&q=75"
        srcset="/_next/image?url=%2Fimg%2Fme.jpeg&w=256&q=75 1x, /_next/image?url=%2Fimg%2Fme.jpeg&w=384&q=75 2x"
        style="color: transparent;"
        width="150"
      />
      <h1
        class="about-me__title"
      >
        Sobre mim
      </h1>
    </div>
    <p
      class="about-me__paragraph"
    >
      Olá! Sou Diego Teixeira Fialho, Senior Frontend Engineer com mais de 11 anos de experiência desenvolvendo aplicações web modernas, escaláveis e de alta performance. Gosto de trabalhar em produtos onde experiência do usuário, performance e qualidade de código realmente fazem a diferença. Meu foco principal é a criação de interfaces responsivas, acessíveis e fáceis de manter, utilizando React, Next.js, TypeScript e CSS.
    </p>
    <p
      class="about-me__paragraph"
    >
      No meu dia a dia, gosto de desenhar componentes reutilizáveis, melhorar a performance das aplicações, colaborar de perto com designers e desenvolvedores backend e contribuir para decisões de arquitetura e evolução técnica dos projetos. Escrever código limpo e bem testado e refinar soluções existentes fazem parte da minha forma de trabalhar.
    </p>
    <p
      class="about-me__paragraph"
    >
      Fora do trabalho, gosto de estudar novas tecnologias web, jogar videogame, assistir filmes e séries, além de passar tempo ao ar livre com minha esposa e meu filho. Acredito que curiosidade, consistência e equilíbrio são essenciais para crescer como desenvolvedor e entregar produtos melhores.
    </p>
    <h2
      class="about-me__what-i-do"
    >
      Um pouco do que eu faço
      :
    </h2>
    <div
      class="about-me__items"
    >
      <div
        class="about-me__skills"
      >
        <h3
          class="about-me__skill-item-title"
        >
          Frontend
        </h3>
        <ul
          class="about-me__skills-list"
        >
          <li>
            Angular
          </li>
          <li>
            AngularJS
          </li>
          <li>
            CSS3
          </li>
          <li>
            HTML5
          </li>
          <li>
            Javascript
          </li>
          <li>
            Pré-processadores
             (sass, less, stylus)
          </li>
          <li>
            React
          </li>
          <li>
            Styled Components
          </li>
          <li>
            Next JS
          </li>
        </ul>
      </div>
      <div
        class="about-me__skills"
      >
        <h3
          class="about-me__skill-item-title"
        >
          Backend
        </h3>
        <ul
          class="about-me__skills-list"
        >
          <li>
            Node
          </li>
          <li>
            PHP
          </li>
          <li>
            Programação Orientada a Objetos
          </li>
          <li>
            Python
          </li>
          <li>
            MySql
          </li>
          <li>
            PostgreeSQL
          </li>
        </ul>
      </div>
      <div
        class="about-me__skills"
      >
        <h3
          class="about-me__skill-item-title"
        >
          Outros
        </h3>
        <ul
          class="about-me__skills-list"
        >
          <li>
            Scrum
          </li>
          <li>
            Git
          </li>
          <li>
            TDD
          </li>
        </ul>
      </div>
    </div>
    <h2
      class="about-me__contact"
    >
      Contato
    </h2>
    <div
      class="about-me__social-media-wrapper"
    >
      <section>
        Social media
      </section>
    </div>
  </main>
</div>
`;

exports[`Templates/AboutMe Should render correctly in en 1`] = `
<div>
  <header>
    Header
  </header>
  <main
    class="about-me__container"
  >
    <div
      class="about-me__title-container"
    >
      <img
        alt="My profile picture"
        class="about-me__title-image"
        data-nimg="1"
        decoding="async"
        height="150"
        src="/_next/image?url=%2Fimg%2Fme.jpeg&w=384&q=75"
        srcset="/_next/image?url=%2Fimg%2Fme.jpeg&w=256&q=75 1x, /_next/image?url=%2Fimg%2Fme.jpeg&w=384&q=75 2x"
        style="color: transparent;"
        width="150"
      />
      <h1
        class="about-me__title"
      >
        About me
      </h1>
    </div>
    <p
      class="about-me__paragraph"
    >
      Hello! I’m Diego Teixeira Fialho, a Senior Frontend Engineer with over 11 years of experience building modern, scalable, and high-performance web applications. I enjoy working on products where user experience, performance, and code quality truly matter. My main focus is developing responsive, accessible, and maintainable interfaces using React, Next.js, TypeScript, and CSS.
    </p>
    <p
      class="about-me__paragraph"
    >
      In my day-to-day work, I like designing reusable components, improving application performance, collaborating closely with designers and backend engineers, and contributing to architectural decisions. Writing clean, well-tested code and continuously refining existing solutions are core parts of how I approach development.
    </p>
    <p
      class="about-me__paragraph"
    >
      Outside of work, I enjoy exploring new web technologies, playing video games, watching movies and TV series, and spending quality time outdoors with my wife and son. I believe curiosity, consistency, and balance are essential for long-term growth as a developer.
    </p>
    <h2
      class="about-me__what-i-do"
    >
      A little about what I do
      :
    </h2>
    <div
      class="about-me__items"
    >
      <div
        class="about-me__skills"
      >
        <h3
          class="about-me__skill-item-title"
        >
          Frontend
        </h3>
        <ul
          class="about-me__skills-list"
        >
          <li>
            Angular
          </li>
          <li>
            AngularJS
          </li>
          <li>
            CSS3
          </li>
          <li>
            HTML5
          </li>
          <li>
            Javascript
          </li>
          <li>
            CSS Preprocessors
             (sass, less, stylus)
          </li>
          <li>
            React
          </li>
          <li>
            Styled Components
          </li>
          <li>
            Next JS
          </li>
        </ul>
      </div>
      <div
        class="about-me__skills"
      >
        <h3
          class="about-me__skill-item-title"
        >
          Backend
        </h3>
        <ul
          class="about-me__skills-list"
        >
          <li>
            Node
          </li>
          <li>
            PHP
          </li>
          <li>
            Object Oriented programming
          </li>
          <li>
            Python
          </li>
          <li>
            MySql
          </li>
          <li>
            PostgreeSQL
          </li>
        </ul>
      </div>
      <div
        class="about-me__skills"
      >
        <h3
          class="about-me__skill-item-title"
        >
          Others
        </h3>
        <ul
          class="about-me__skills-list"
        >
          <li>
            Scrum
          </li>
          <li>
            Git
          </li>
          <li>
            TDD
          </li>
        </ul>
      </div>
    </div>
    <h2
      class="about-me__contact"
    >
      Contact
    </h2>
    <div
      class="about-me__social-media-wrapper"
    >
      <section>
        Social media
      </section>
    </div>
  </main>
</div>
`;
